--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+coverage==5.5
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.7.1
@@ -26,6 +27,7 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.53.0
 httplib2==0.19.0
 idna==2.10
+iniconfig==1.1.1
 ipykernel==5.5.0
 ipython==7.21.0
 ipython-genutils==0.2.0
@@ -47,6 +49,7 @@ nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
+numexpr==2.7.3
 numpy==1.20.1
 packaging==20.9
 pandas==1.2.3
@@ -56,10 +59,12 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.2
 plotly==4.14.3
+pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.17
 protobuf==3.15.6
 ptyprocess==0.7.0
+py==1.10.0
 pyarrow==3.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -68,6 +73,8 @@ pydeck==0.6.1
 Pygments==2.8.1
 pyparsing==2.4.7
 pyrsistent==0.17.3
+pytest==6.2.3
+pytest-cov==2.11.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2021.1
@@ -81,6 +88,7 @@ Send2Trash==1.5.0
 six==1.15.0
 smmap==3.0.5
 streamlit==0.79.0
+tables==3.6.1
 terminado==0.9.3
 testpath==0.4.4
 toml==0.10.2
