--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [server]
-serverAddress = "0.0.0.0"
 port = 8999
 headless = true
 # enableCORS = false
 # enableXsrfProtection = false
+[browser]
+serverAddress = "0.0.0.0"
