--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,33 +1,73 @@
-# .pre-commit-config.yaml
+---
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-        args: ['--maxkb=2000']
-    -   id: detect-private-key
-
--   repo: https://github.com/ambv/black
-    rev: 21.7b0
-    hooks:
-    -   id: black
-        args: [--line-length=79]
-        language_version: python3.8
-
--   repo: https://github.com/pycqa/flake8
-    rev: 3.7.9
-    hooks:
-    -   id: flake8
-        exclude: "^tests*,*/migrations/*"
-        args:
-                - "--max-line-length=120"
-                - "--ignore=E712,W503,W605,F401,F403,F405"
-                  # E712 - if, W503 - binary, F401,F403,F405 - star imports
-
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910
-    hooks:
-    -   id: mypy
+  - hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - args:
+          - --maxkb=2000
+        id: check-added-large-files
+      - id: detect-private-key
+      - id: check-executables-have-shebangs
+      - id: check-docstring-first
+      - id: check-ast
+      - id: check-builtin-literals
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: check-toml
+      - id: sort-simple-yaml
+      - id: check-yaml
+    repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
+  - hooks:
+      - args:
+          - -iii
+          - -ll
+        id: bandit
+    repo: https://github.com/pycqa/bandit
+    rev: 1.7.4
+  - hooks:
+      - args:
+          - --line-length=79
+        id: black
+    repo: https://github.com/ambv/black
+    rev: 22.8.0
+  - hooks:
+      - additional_dependencies:
+          - flake8-bugbear
+          - flake8-comprehensions
+          - flake8-mutable
+          - flake8-print
+          - flake8-simplify
+        id: flake8
+    repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
+  - hooks:
+      - additional_dependencies: []
+        id: mypy
+    repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.971
+  - hooks:
+      - id: isort
+    repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+  - hooks:
+      - additional_dependencies:
+          - toml
+        id: pydocstyle
+    repo: https://github.com/pycqa/pydocstyle
+    rev: 6.1.1
+  - hooks:
+      - args:
+          - --py36-plus
+          - --py37-plus
+          - --py38-plus
+          - --py39-plus
+          - --py310-plus
+        id: pyupgrade
+    repo: https://github.com/asottile/pyupgrade
+    rev: v2.37.3
+  - hooks:
+      - id: hadolint
+    repo: https://github.com/AleksaC/hadolint-pre-commit-hook
+    rev: be866b09602e241f76a5ecd52d6a3acaf3fa5e2f
