--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,17 @@ isodate = "*"
 altair = "*"
 numpy = "*"
 pandas = "*"
+sentry-sdk = "*"
+tubestats = { editable = true, path = "." }
+watchdog = "*"
 
 [dev-packages]
 pytest = "*"
+ansible = "*"
+pytest-xdist = "*"
+pytest-cov = "*"
+flake8 = "*"
+mypy = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
